--- a/example/build.yaml
+++ b/example/build.yaml
@@ -1,14 +1,7 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
 build_from:
-  aarch64: "ghcr.io/home-assistant/aarch64-base:3.15"
-  amd64: "ghcr.io/home-assistant/amd64-base:3.15"
-  armhf: "ghcr.io/home-assistant/armhf-base:3.15"
-  armv7: "ghcr.io/home-assistant/armv7-base:3.15"
-  i386: "ghcr.io/home-assistant/i386-base:3.15"
-labels:
-  org.opencontainers.image.title: "Home Assistant Add-on: Example add-on"
-  org.opencontainers.image.description: "Example add-on to use as a blueprint for new add-ons."
-  org.opencontainers.image.source: "https://github.com/home-assistant/addons-example"
-  org.opencontainers.image.licenses: "Apache License 2.0"
-args:
-  TEMPIO_VERSION: "2021.09.0"
+  aarch64: ghcr.io/hassio-addons/debian-base/aarch64:7.3.3
+  amd64: ghcr.io/hassio-addons/debian-base/amd64:7.3.3
+  armv7: ghcr.io/hassio-addons/debian-base/armv7:7.3.3
+  armhf: ghcr.io/hassio-addons/debian-base/armhf:7.3.3
+  i386: ghcr.io/hassio-addons/debian-base/i386:7.3.3
