--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,9 +1,9 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
-name: Example add-on
+name: first test
 version: "0.0.1"
 slug: example
-description: Example add-on
-url: "https://github.com/home-assistant/addons-example/tree/main/example"
+description: First test
+url: "https://github.com/daestx/addons-example"
 arch:
   - armhf
   - armv7
