--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,8 +1,8 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
-name: first test
+name: Raise3D
 version: "0.0.1"
 slug: example
-description: First test
+description: Raise3D 3D printer support
 url: "https://github.com/daestx/addons-example"
 arch:
   - armhf
